--- a/FlightBoard/src/app/components/layout/layout.component.html
+++ b/FlightBoard/src/app/components/layout/layout.component.html
@@ -1,4 +1,17 @@
-<div class="container">
+<div>
     <app-theme-switcher>
+        <div class="wrap background">
+            <div class="content">
+                <div class="container">
+                    <div class="background-secondary">
+                        <app-search></app-search>
+                    </div>
+                    <div class="background-secondary table">
+                        <app-board style="display: flex;"></app-board>
+                    </div>
+                </div>
+            </div>
+        </div>
     </app-theme-switcher>
+    <app-modal></app-modal>
 </div>
