--- a/FlightBoard/src/app/components/board/board.component.scss
+++ b/FlightBoard/src/app/components/board/board.component.scss
@@ -1,15 +1,11 @@
-table {
+div {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    border-collapse: collapse;
-}
+    height: 100%;
 
-th,
-td {
-    border: 1px solid gray;
-    padding: 8px;
-    text-align: left;
-}
-
-th {
-    background-color: lightgray;
+    .table {
+        width: 100%;
+        height: 100%;
+    }
 }
