--- a/FlightBoard/src/app/components/modal/modal.component.html
+++ b/FlightBoard/src/app/components/modal/modal.component.html
@@ -1,10 +1,8 @@
-<div class="modal">
-    <div class="container">
-        <div class="modal-header">
-            <button type="button" class="close" (click)="closeModal()">&times;</button>
+<ng-container *ngIf="display$ | async as display">
+    <section [class.open]="display.status === 'open'" (click)="close()">
+        <div (click)="$event.stopPropagation()">
+            <button class="close" type="button" (click)="close()">X</button>
+            <app-table [table]="display.content"></app-table>
         </div>
-        <div class="modal-body">
-            {{modalContent}}
-        </div>
-    </div>
-</div>
+    </section>
+</ng-container>
