--- a/FlightBoard/src/app/components/modal/modal.component.scss
+++ b/FlightBoard/src/app/components/modal/modal.component.scss
@@ -1,53 +1,51 @@
-.modal {
+section {
+    visibility: hidden;
+    opacity: 0;
+
+    &.open {
+        visibility: inherit;
+        opacity: 1;
+    }
+
     display: flex;
-    justify-content: center;
+
     position: fixed;
-    z-index: 999;
-    padding-top: 100px;
-    left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.76);
-}
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999999;
 
-.container {
+    background: rgba(0, 0, 0, 0.8);
+    transition: opacity 250ms ease-in;
 
-    display: flex;
-    margin-top: 200px;
-    max-width: 50%;
-    height: fit-content;
-    border-radius: 8px;
-    background-color: #f9f9f9;
+    >div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
+        height: auto;
+        width: auto;
+        background: white;
+        padding: 64px;
+        border-radius: 8px;
 
-    .modal-header,
-    .modal-footer {
-        padding: 20px;
-        color: #333;
+        box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
     }
 
-    .modal-body {
-        padding: 20px;
-        padding: 20px;
-        color: #333;
-    }
-
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
+    button.close {
+        background: none;
+        color: inherit;
         border: none;
-        background-color: transparent;
-    }
-
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
+        font: inherit;
         cursor: pointer;
+        outline: none;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        padding: 16px;
     }
 }
