--- a/FlightBoard/src/app/components/table/table.component.scss
+++ b/FlightBoard/src/app/components/table/table.component.scss
@@ -1,15 +1,56 @@
-table {
+.container {
     width: 100%;
-    border-collapse: collapse;
+    height: 100%;
+    overflow-y: auto;
+    padding-right: 25px;
+    padding-left: 25px;
+
+    &::-webkit-scrollbar {
+        width: 8px;
+        border-radius: 10px;
+        background-color: #f5f5f5;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+        background-color: #000000;
+    }
+
+    table {
+
+        width: 100%;
+        height: auto;
+        border-collapse: collapse;
+        position: relative;
+
+
+        th,
+        td {
+            padding: 30px;
+            text-align: left;
+            text-align: center;
+        }
+
+        .clickable {
+            cursor: pointer;
+        }
+
+        th {
+            border-collapse: separate;
+
+            position: sticky;
+            top: 0;
+        }
+
+        td {
+            text-align: center;
+        }
+    }
 }
 
-th,
-td {
-    border: 1px solid gray;
-    padding: 8px;
-    text-align: left;
-}
+tbody tr:hover {
+    //background-color: #6b6b6b;
+    border: 1px solid #ddd;
 
-th {
-    background-color: lightgray;
 }
